fix: overflow screen

--- a/webserver/chatbot/static/chatbot/chatbot.css
+++ b/webserver/chatbot/static/chatbot/chatbot.css
@@ -173,7 +173,7 @@ html, body {
     margin-top: 30%;
     margin-left: 5%;
     width: 96%;
-    height: 94%;
+    height: 84%;
     overflow-y: scroll;
 }
 
